wip coding examples page - scrollbar issue on mobile corrected

--- a/scss/pages/_coding.scss
+++ b/scss/pages/_coding.scss
@@ -15,11 +15,15 @@
 .coding-btn-wrapper {
     
     width: 100%;
-    text-align: center;
-    margin-top: 1.5rem;
+    height: 4.5rem;
+    margin-top: 5rem auto 0;
    
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 
-    button {      
+    a {    
+        display: block;  
         background-color: darken(map-get($colors, 'dark-pink'), 20%);
         color: white;
         padding: 1rem;
@@ -27,6 +31,7 @@
         border: none;
         border-radius: 0.2rem;
         font-weight: 500;
+        width: 15rem;
     }
 
 }
@@ -34,6 +39,7 @@
 /* outer wrapper for slick and all of the coding slides */
 .coding-slides-wrapper {
     width: 100%;
+    height: 50rem;
     margin: 1rem auto;
     
     background-color: black;
@@ -143,6 +149,8 @@
 }
 
 
+
+
 /* firefox only */
 .coding-image-wrapper {   
     scrollbar-color: #5555 #7775;
@@ -168,12 +176,13 @@
     background-color: #5555;
 }
 
-.coding-sample::-webkit-scrollbar-track:hover {
+.coding-image-wrapper::-webkit-scrollbar-track:hover {
     background-color: #555;
 }
 
-
-
+.coding-image-wrapper::-webkit-scrollbar-corner {
+    background: rgba(0,0,0,0) !important;
+  }
 
 
 // .coding {
